# aws-iot-device-sdk-embedded-C

doc/config/: common
doc/lib/: taskpool.txt
doc/plantuml/: taskpool_design_typicaloperation.pu
lib/include/: aws_iot_taskpool.h  aws_iot_taskpool_types.h  iot_linear_containers.h
lib/include/private/: aws_iot_taskpool_internal.h
lib/source/common/: CMakeLists.txt  aws_iot_taskpool.c
tests/common/: CMakeLists.txt  iot_tests_common.c
tests/common/system/: iot_tests_taskpool_stress.c
tests/common/unit/: iot_tests_taskpool.c  iot_tests_taskpool_unit.c
